<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/rectangle"
    tools:context=".RegisterActivity">

    <androidx.viewpager.widget.ViewPager
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/viewpager"/>


    <ImageView
        android:id="@+id/logo"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginStart="273dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="553dp"
        android:src="@drawable/flexipay_logo"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="344dp"
        android:layout_height="41dp"
        android:layout_marginTop="344dp"
        android:text="@string/welcome_to_flexi_pay"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:layout_marginStart="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.611"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/description"
        android:layout_width="342dp"
        android:layout_height="67dp"
        android:layout_marginTop="36dp"
        android:text="@string/a_fast_and_efficient_service_to_go_cashless"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.623"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />


    <TextView
        android:id="@+id/login"
        android:layout_width="230dp"
        android:layout_height="47dp"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="8sp"
        android:text="@string/already_have_an_account"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.254"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/login2"
        android:layout_width="70dp"
        android:layout_height="47dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="8sp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/ind1"
        android:layout_width="99dp"
        android:layout_height="12dp"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.326"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description"
        app:srcCompat="@drawable/unselected" />

    <ImageView
        android:id="@+id/ind2"
        android:layout_width="30dp"
        android:layout_height="91dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ind1"
        app:layout_constraintBottom_toBottomOf="@+id/ind1"
        app:srcCompat="@drawable/selected"
        tools:layout_editor_absoluteY="507dp" />

    <ImageView
        android:id="@+id/ind3"
        android:layout_width="39dp"
        android:layout_height="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.65"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ind2"
        app:layout_constraintBottom_toBottomOf="@+id/ind2"
        app:srcCompat="@drawable/unselected"
        tools:layout_editor_absoluteY="549dp" />

    <Button
        android:layout_width="289dp"
        android:layout_height="0dp"
        android:id="@+id/btn_Register"
        android:layout_marginBottom="100dp"
        android:background="@drawable/button_bg"
        android:text="@string/register"
        android:textAllCaps="true"
        android:textSize="26dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>