<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rectangle"
    tools:context=".RegisterActivity">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vpIntroSlider"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/logo"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginStart="273dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="553dp"
        android:src="@drawable/flexipay_logo"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="344dp"
        android:layout_height="41dp"
        android:layout_marginTop="490dp"
        android:text="@string/welcome_to_flexi_pay"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:fontFamily="@font/montserrat"
        android:layout_marginStart="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.611"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/description"
        android:layout_width="342dp"
        android:layout_height="67dp"
        android:fontFamily="@font/montserrat"
        android:text="A Fast &amp; Efficient Service to Go Cashless!!"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="normal"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.623"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />


    <TextView
        android:id="@+id/login"
        android:layout_width="230dp"
        android:layout_height="47dp"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="8sp"
        android:text="@string/already_have_an_account"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="normal"
        android:fontFamily="@font/montserrat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.254"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/login2"
        android:layout_width="70dp"
        android:layout_height="47dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="8sp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="normal"
        android:fontFamily="@font/montserrat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.ekenya.android.flexipayapp.IndicatorLayout
        android:id="@+id/indicatorLayout"
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="150dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:indicatorCount="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="240dp"
        android:layout_height="45dp"
        android:id="@+id/btn_register"
        android:layout_marginBottom="90dp"
        android:background="@drawable/button_bg"
        style="@style/Widget.MaterialComponents.Button"
        android:text="@string/register"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:fontFamily="@font/montserrat"
        android:textStyle="bold"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>